--- a/main.css
+++ b/main.css
@@ -26,6 +26,42 @@ canvas {
 	display: block;
 }
 
+#container {
+	box-sizing: border-box;
+	height: 100%;
+	left: 0;
+	margin: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+		
+#blocker {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+		
+#instructions {
+	width: 100%;
+	height: 100%;
+    font-size: 30px;
+    font-family: 'Courier New';
+	display: -webkit-box;
+	display: -moz-box;
+	display: box;
+	-webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+	-webkit-box-pack: center;
+	-moz-box-pack: center;
+	-webkit-box-align: center;
+	-moz-box-align: center;
+	color: #ffffff;
+	text-align: center;
+	cursor: pointer;
+}
+
 #info {
 	position: absolute;
 	top: 0px;
