--- a/main.css
+++ b/main.css
@@ -62,20 +62,25 @@ canvas {
 	cursor: pointer;
 }
 
-#info {
+#hms {
 	position: absolute;
 	top: 0px;
 	width: 100%;
-	padding: 10px;
+	padding: 15px;
+	font-size: 30px;
 	box-sizing: border-box;
 	text-align: center;
 	-moz-user-select: none;
 	-webkit-user-select: none;
+	color: #000000;
 	-ms-user-select: none;
 	user-select: none;
 	pointer-events: none;
 	z-index: 1; /* TODO Solve this in HTML */
 }
+
+
+
 
 a, button, input, select {
 	pointer-events: auto;
@@ -89,35 +94,4 @@ a, button, input, select {
 	z-index: 2 !important; /* TODO Solve this in HTML */
 }
 
-#overlay {
-	position: absolute;
-	z-index: 2;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height:100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	opacity: 1;
-	background-color: #000000;
-	color: #ffffff;
-}
 
-#overlay > div {
-	text-align: center;
-}
-
-#overlay > div > button {
-	height: 20px;
-	background: transparent;
-	color: #ffffff;
-	outline: 1px solid #ffffff;
-	border: 0px;
-	cursor: pointer;
-}
-
-#overlay > div > p {
-	color: #777777;
-	font-size: 12px;
-}
