--- a/main.css
+++ b/main.css
@@ -42,7 +42,12 @@ canvas {
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
 }
-		
+#final {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}		
 #instructions {
 	width: 100%;
 	height: 100%;
@@ -61,6 +66,25 @@ canvas {
 	text-align: center;
 	cursor: pointer;
 }
+#game {
+	width: 100%;
+	height: 100%;
+    font-size: 30px;
+    font-family: 'Courier New';
+	display: -webkit-box;
+	display: -moz-box;
+	display: box;
+	-webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+	-webkit-box-pack: center;
+	-moz-box-pack: center;
+	-webkit-box-align: center;
+	-moz-box-align: center;
+	color: #ffffff;
+	text-align: center;
+	cursor: pointer;
+}
+
 
 #hms {
 	position: absolute;
