--- a/main.css
+++ b/main.css
@@ -118,7 +118,16 @@ canvas {
 	pointer-events: none;
 	z-index: 100; /* TODO Solve this in HTML */
 }
+#minoalert {
+	position: absolute;
+    color: #aa0909;
+	width: 100%;
+	height: 5%;
+    text-align: center;
+    padding-top:2%;
+    vertical-align:middle;
 
+}
 
 
 
